--- a/project_2_shopping_cart/main_body.html
+++ b/project_2_shopping_cart/main_body.html
@@ -1,45 +1,45 @@
 <main>
     <nav>
-        <div class="nav-center">
+        <div className="nav-center">
             <h3>Shopping Cart</h3>
-            <div class="nav-container">
+            <div className="nav-container">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
                     <path
                         d="M16 6v2h2l2 12H0L2 8h2V6a6 6 0 1 1 12 0zm-2 0a4 4 0 1 0-8 0v2h8V6zM4 10v2h2v-2H4zm10 0v2h2v-2h-2z" />
                 </svg>
-                <div class="amount-container">
-                    <p class="total-amount">4</p>
+                <div className="amount-container">
+                    <p className="total-amount">4</p>
                 </div>
             </div>
         </div>
     </nav>
 
 
-    <section class="cart">
+    <section className="cart">
         <header>
             <h2>your bag</h2>
         </header>
 
         <div>
-            <article class="cart-item">
+            <article className="cart-item">
                 <img src="https://res.cloudinary.com/diqqf3eq2/image/upload/v1583368215/phone-2_ohtt5s.png" alt="" />
                 <div>
                     <h4>iphone</h4>
-                    <h4 class="item-price">10</h4>
-                    <button class="remove-btn">remove</button>
+                    <h4 className="item-price">10</h4>
+                    <button className="remove-btn">remove</button>
                 </div>
                 <div>
 
-                    <button class="amount-btn">
+                    <button className="amount-btn">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
                             <path d="M10.707 7.05L10 6.343 4.343 12l1.414 1.414L10 9.172l4.243 4.242L15.657 12z" />
                         </svg>
                     </button>
 
-                    <p class="amount">2</p>
+                    <p className="amount">2</p>
 
 
-                    <button class="amount-btn">
+                    <button className="amount-btn">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
                             <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
                         </svg>
@@ -51,12 +51,12 @@
 
         <footer>
             <hr />
-            <div class="cart-total">
+            <div className="cart-total">
                 <h4>
                     total <span>122</span>
                 </h4>
             </div>
-            <button class="btn clear-btn">
+            <button className="btn clear-btn">
                 clear cart
             </button>
         </footer>
